gccida/g0/try_tablejump
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_tablejump/src/expr.c:11089:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v8; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_tablejump/src/expr.c:11092:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *index_expra; // [rsp+20h] [rbp-30h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_tablejump/src/expr.c:11107:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( index_type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_tablejump/src/expr.c:11108:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( BYTE5( range->common.type->block.abstract_origin) >> 1), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_tablejump/src/expr.c:11111:25: error: use of undeclared identifier 'machine_mode'
do_tablejump( indexa, ( machine_mode)( BYTE5( index_type->block.abstract_origin) >> 1), v10, table_label, default_label); 
                        ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/try_tablejump/src/obj/expr.o] Error 1
